Notification support - initial import

--- a/gimmix/Makefile
+++ b/gimmix/Makefile
@@ -18,7 +18,7 @@ GLIB_LIB=`pkg-config --libs glib-2.0 glib`
 CFLAGS=-march=i686 -pipe -O2 -Wall -fPIC $(GTK_CFLAGS) $(GLADE_CFLAGS) $(MPD_CFLAGS) $(GLIB_CFLAGS) -I.
 LIBS=$(CONFUSE_LIB) $(GTK_LIB) $(GLADE_LIB) $(MPD_LIB) $(GLIB_LIB)
 
-OBJS = config.o gimmixcore.o interface.o gimmix.o
+OBJS = config.o gimmix-notify.o gimmixcore.o interface.o gimmix.o
 
 CC=gcc
 
@@ -32,6 +32,9 @@ gimmix: $(OBJS)
 clean:
 	rm -f *.o core *.so* *.bak *~ src/*~ gimmix
 
+
+gimmix-notify.o:	src/gimmix-notify.c
+	$(CC) $(CFLAGS) -c src/gimmix-notify.c
 config.o:			src/config.c
 	$(CC) $(CFLAGS) -c src/config.c
 #prefs.o:		src/prefs.c
