Cleanups in notification framework

--- a/gimmix/Makefile
+++ b/gimmix/Makefile
@@ -6,6 +6,8 @@ PREFIX=/usr/local
 ALLFILES=*.c
 
 CONFUSE_LIB=`pkg-config libconfuse --libs`
+NOTIFY_CFLAGS=`pkg-config libnotify --cflags`
+NOTIFY_LIB=`pkg-config libnotify --libs`
 GTK_CFLAGS=`pkg-config gtk+-2.0 --cflags`
 GTK_LIB=`pkg-config gtk+-2.0 --libs`
 GLADE_CFLAGS=`pkg-config libglade-2.0 --cflags`
@@ -15,10 +17,10 @@ MPD_LIB=`pkg-config libmpd --libs`
 GLIB_CFLAGS=`pkg-config --cflags glib-2.0 glib`
 GLIB_LIB=`pkg-config --libs glib-2.0 glib`
 
-CFLAGS=-march=i686 -pipe -O2 -Wall -fPIC $(GTK_CFLAGS) $(GLADE_CFLAGS) $(MPD_CFLAGS) $(GLIB_CFLAGS) -I.
-LIBS=$(CONFUSE_LIB) $(GTK_LIB) $(GLADE_LIB) $(MPD_LIB) $(GLIB_LIB)
+CFLAGS=-march=i686 -pipe -O2 -Wall -fPIC $(NOTIFY_CFLAGS) $(GTK_CFLAGS) $(GLADE_CFLAGS) $(MPD_CFLAGS) $(GLIB_CFLAGS) -I.
+LIBS=$(CONFUSE_LIB) $(NOTIFY_LIB) $(GTK_LIB) $(GLADE_LIB) $(MPD_LIB) $(GLIB_LIB)
 
-OBJS = config.o gimmix-notify.o gimmixcore.o interface.o gimmix.o
+OBJS = config.o gimmixcore.o interface.o gimmix.o
 
 CC=gcc
 
@@ -32,9 +34,6 @@ gimmix: $(OBJS)
 clean:
 	rm -f *.o core *.so* *.bak *~ src/*~ gimmix
 
-
-gimmix-notify.o:	src/gimmix-notify.c
-	$(CC) $(CFLAGS) -c src/gimmix-notify.c
 config.o:			src/config.c
 	$(CC) $(CFLAGS) -c src/config.c
 #prefs.o:		src/prefs.c
