added an image for the first run dialog

--- a/gimmix/trunk/src/Makefile
+++ b/gimmix/trunk/src/Makefile
@@ -46,4 +46,5 @@ install:
 	install -d $(PREFIX)/share/gimmix
 	install -D gimmix $(PREFIX)/bin/gimmix
 	install -D -m644 pixmaps/gimmix.png $(PREFIX)/share/pixmaps/gimmix.png
+	install -D -m644 pixmaps/gimmix_firstrun.png $(PREFIX)/share/gimmix/gimmix_firstrun.png
 	install -D -m644 glade/gimmix.glade $(PREFIX)/share/gimmix/gimmix.glade
