* Separated first run dialog's code from the main code. * Minor fixes.

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -17,7 +17,7 @@ MPD_LIB=$(shell pkg-config libmpd --libs)
 CFLAGS += -fPIC -DPREFIX=\"$(PREFIX)\" $(NOTIFY_CFLAGS) $(GLADE_CFLAGS) $(MPD_CFLAGS) -I.
 LIBS=$(CONFUSE_LIB) $(NOTIFY_LIB) $(GLADE_LIB) $(MPD_LIB)
 
-OBJS = config.o gimmix-core.o playlist.o interface.o gimmix.o
+OBJS = config.o gimmix-core.o playlist.o interface.o firstrun.o gimmix.o
 
 CC=gcc
 
@@ -33,8 +33,10 @@ clean:
 
 config.o:		src/config.c
 	$(CC) $(CFLAGS) -c src/config.c
-gimmix-core.o:		src/gimmix-core.c
+gimmix-core.o:	src/gimmix-core.c
 	$(CC) $(CFLAGS) -c src/gimmix-core.c
+firstrun.o:		src/firstrun.c
+	$(CC) $(CFLAGS) -c src/firstrun.c
 playlist.o:		src/playlist.c
 	$(CC) $(CFLAGS) -c src/playlist.c
 interface.o:		src/interface.c
