--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -47,7 +47,8 @@ gimmix.o:		src/gimmix.c
 install: all
 	install -d $(PREFIX)/share/gimmix
 	install -D gimmix $(PREFIX)/bin/gimmix
-	install -D -m644 pixmaps/gimmix.png $(PREFIX)/share/pixmaps/gimmix.png
-	install -D -m644 pixmaps/gimmix_firstrun.png $(PREFIX)/share/gimmix/gimmix_firstrun.png
+	install -D -m644 data/gimmix.png $(PREFIX)/share/pixmaps/gimmix.png
+	install -D -m644 data/gimmix_firstrun.png $(PREFIX)/share/gimmix/gimmix_firstrun.png
+	install -D -m644 data/gimmix.desktop $(PREFIX)/share/applications/gimmix.desktop
 	install -D -m644 glade/gimmix.glade $(PREFIX)/share/gimmix/gimmix.glade
 
