gimmix-interface.c, gimmix-playlist.c: All widgets are now looked up at once (at init) and the xml is freed immediately. reduced lookup calls in gimmix-playlist. gimmix.c: no need to free xml at exit_cleanup() Makefile: removed -g3 (accidently added)

--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -12,7 +12,7 @@ MPD_CFLAGS=$(shell pkg-config libmpd --cflags)
 MPD_LIB=$(shell pkg-config libmpd --libs)
 TAG_CFLAGS=$(shell pkg-config taglib --cflags)
 
-CFLAGS += -g3 -fPIC -DPREFIX=\"$(PREFIX)\" $(GLADE_CFLAGS) $(MPD_CFLAGS) $(TAG_CFLAGS) -I.
+CFLAGS += -fPIC -DPREFIX=\"$(PREFIX)\" $(GLADE_CFLAGS) $(MPD_CFLAGS) $(TAG_CFLAGS) -I.
 LIBS= $(GLADE_LIB) $(MPD_LIB) -ltag_c
 
 OBJS = wejpconfig.o gimmix-config.o gimmix-core.o gimmix-playlist.o gimmix-systray.o gimmix-prefs.o gimmix-interface.o gimmix-firstrun.o gimmix-tagedit.o gimmix.o
