fixed a small bug caused by the previous push.

--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -32,6 +32,8 @@ GLADE_REQUIRED=2.6.0
 MPD_REQUIRED=0.12.0
 TAGLIB_REQUIRED=1.4
 
+GETTEXT_PACKAGE="gimmix"
+AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 
 AC_MSG_CHECKING(for flying pigs)
