configure.ac: * define GETTEXT_PACKAGE (required for localization) * define LOCALEDIR gimmix.c: * use config.h * use GETTEXT_PACKAGE and LOCALEDIR for gettext functions.

--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -32,9 +32,11 @@ GLADE_REQUIRED=2.6.0
 MPD_REQUIRED=0.12.0
 TAGLIB_REQUIRED=1.4
 
-GETTEXT_PACKAGE="gimmix"
+GETTEXT_PACKAGE=gimmix
 AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [needed for bindtextdomain() and textdomain()])
 AM_GLIB_GNU_GETTEXT
+AM_GLIB_DEFINE_LOCALEDIR(LOCALEDIR)
 
 AC_MSG_CHECKING(for flying pigs)
 AC_MSG_RESULT([ooh, there's one!])
