--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -29,6 +29,7 @@ then
 	CFLAGS="${CFLAGS} -Wall"
 fi
 
+ALL_LINGUAS="fr"
 GETTEXT_PACKAGE=gimmix
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [needed for bindtextdomain() and textdomain()])
@@ -49,6 +50,7 @@ dnl ==========================================================================
 
 AC_OUTPUT([
 src/Makefile
+po/Makefile.in
 Makefile
 ])
 
