* L33T new libnotify-like tooltip with progressbar. gimmix-tooltip: Initial import gimmix-systray: dropped GtkTooltips. use GimmixTooltip instead. Makefile.am: added gimmix-tooltip.c to the list of sources. gimmix-playlist.c: minor fixes.

--- a/trunk/src/src/Makefile.am
+++ b/trunk/src/src/Makefile.am
@@ -10,6 +10,7 @@ gimmix_SOURCES=	wejpconfig.c \
 		gimmix-config.c \
 		gimmix-core.c \
 		gimmix-playlist.c \
+		gimmix-tooltip.c \
 		gimmix-systray.c \
 		gimmix-prefs.c \
 		gimmix-interface.c \
