* 0.4.0 Pre-release. * Two months of full work. * Brand new interface. * Major code modifications and fixes. * Improved startup time. * L33T-new gmpc style system tray tooltip with a progress bar and image. * Many more changes, i don't remember ;)

--- a/trunk/src/src/Makefile.am
+++ b/trunk/src/src/Makefile.am
@@ -7,6 +7,7 @@ bin_PROGRAMS=gimmix
 ## Gimmix
 gimmix_SOURCES=	wejpconfig.c \
 		eggtrayicon.c \
+		sexy-tooltip.c \
 		gimmix-config.c \
 		gimmix-core.c \
 		gimmix-playlist.c \
