--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -28,7 +28,7 @@ then
 	CFLAGS="${CFLAGS} -Wall"
 fi
 
-ALL_LINGUAS="zh_TW"
+ALL_LINGUAS="tr zh_TW"
 GETTEXT_PACKAGE=gimmix
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [needed for bindtextdomain() and textdomain()])
