--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -40,7 +40,9 @@ AC_MSG_RESULT([ooh, there's one!])
 pkg_modules="gtk+-2.0 >= 2.6.0 \
 			 libmpd >= 0.12.0 \
 			 libglade-2.0 >= 2.6.0 \
-			 taglib >= 1.4"
+			 taglib >= 1.4 \
+			 libxml-2.0 >= 2.0 \
+			 libcurl"
 PKG_CHECK_MODULES([GIMMIX], [$pkg_modules])
 
 CFLAGS="${CFLAGS}"
