* Makefile.am: added gimmix-covers.c * gimmix-covers.c: implemented a cover download function using curl

--- a/trunk/src/src/Makefile.am
+++ b/trunk/src/src/Makefile.am
@@ -18,6 +18,7 @@ gimmix_SOURCES=	wejpconfig.c \
 		gimmix-firstrun.c \
 		gimmix-tagedit.c \
 		gimmix-lyrics.c \
+		gimmix-covers.c \
 		gimmix.c
 
 
