* Major rewrite of the Cover fetcher and Lyrics plugins * Dropped the old, buggy libxml2+curl method of fetching/parsing results   from amazon and leoslyrics. Gimmix now uses libnxml which is simple   and does the job! * Lots of bugfixes in the old cover manager code

--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -29,7 +29,7 @@ AC_MSG_CHECKING(whether lyrics plugin is enabled)
 if test "x$lyrics" = "xyes" ; then
 	enable_lyrics=yes
 	AC_MSG_RESULT(yes)
-	pkg_modules="libxml-2.0 >= 2.0 libcurl"
+	pkg_modules="libxml-2.0 >= 2.0 nxml libcurl"
 	CFLAGS="${CFLAGS} -DHAVE_LYRICS"
 	AC_DEFINE(HAVE_LYRICS, 1, [building gimmix with lyrics support])
 else
