* more bugfixes. * added a separate metadata component * metadata now displays artist, song, album and genre

--- a/trunk/src/src/Makefile.am
+++ b/trunk/src/src/Makefile.am
@@ -14,6 +14,7 @@ gimmix_SOURCES=	wejpconfig.c \
 		gimmix-tooltip.c \
 		gimmix-systray.c \
 		gimmix-prefs.c \
+		gimmix-metadata.c \
 		gimmix-interface.c \
 		gimmix-firstrun.c \
 		gimmix-tagedit.c \
