* gimmix.1: Added a manpage for gimmix (Thanks to Vincent Legout) * Bump version to 0.5.3 * Update README and ChangeLog

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -12,7 +12,10 @@ icon_DATA = data/gimmix.png \
 desktopdir = $(datadir)/applications
 desktop_DATA = data/gimmix.desktop
 
+man_MANS = gimmix.1
+
 EXTRA_DIST =                            \
         $(icon_DATA)                    \
         $(share_DATA)                   \
-        $(desktop_DATA)
+        $(desktop_DATA)					\
+		$(man_MANS)
