Added missing entries in POTFILES.in and POTFILES.skip. This closes #313023 (Thanks to Vincent Legout)

--- a/trunk/src/po/POTFILES.in
+++ b/trunk/src/po/POTFILES.in
@@ -7,4 +7,6 @@ src/gimmix-firstrun.c
 src/gimmix-config.c
 src/gimmix-prefs.c
 src/gimmix-tagedit.c
+src/gimmix-covers.c
+src/gimmix-lyrics.c
 glade/gimmix.glade
