* Makefile.am: Removed ltag_c from GIMMIX_LIBS (use from autoconf) * configure.ac: check for taglib_c instead of taglib * ChangeLog: updates for 0.5.6 * gimmix.h: removed unwanted header

--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -32,7 +32,7 @@ AC_MSG_CHECKING(whether id3 tag editing support is enabled)
 if test "$tageditor" = "yes"; then
 	enable_tageditor=yes
 	AC_MSG_RESULT(yes)
-	pkg_modules="taglib >= 1.4"
+	pkg_modules="taglib_c >= 1.4"
 	CFLAGS="${CFLAGS} -DHAVE_TAGEDITOR"
 	AC_DEFINE(HAVE_TAGEDITOR, 1, [building gimmix with id3 tag editing support])
 else
