* Added swedish translation (Thanks to Niklas Grahn)

--- a/trunk/src/configure.ac
+++ b/trunk/src/configure.ac
@@ -88,7 +88,7 @@ then
 	CFLAGS="${CFLAGS} -Wall"
 fi
 
-ALL_LINGUAS="de tr zh_TW"
+ALL_LINGUAS="de sv tr zh_TW"
 GETTEXT_PACKAGE=gimmix
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [needed for bindtextdomain() and textdomain()])
